--- a/docker-compose-imagepull.yaml
+++ b/docker-compose-imagepull.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - backend
     networks:
-      - nodeappnetwork
+      - reactappnetwork
   backend:
     image: saagarsh/react-3-tier-application-backend:1.0
     container_name: backend
@@ -21,7 +21,7 @@ services:
     depends_on:
       - db
     networks:
-      - nodeappnetwork
+      - reactappnetwork
   db:
     image: saagarsh/mysql:1.0
     container_name: mysqldb-c
@@ -30,11 +30,12 @@ services:
       - MYSQL_DATABASE=school
     volumes:
       - mysql-data:/var/lib/mysql
-
+    networks:
+      - reactappnetwork
 volumes:
   mysql-data:
 networks:
-  nodeappnetwork:
+  reactappnetwork:
     driver: bridge
 
 
