--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,10 +33,27 @@ services:
     networks:
       - reactappnetwork
 
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - /home/user/Desktop/sample_projects/react-3-tier-application/prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - reactappnetwork
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - reactappnetwork
+
 volumes:
   mysql-data:
 networks:
   reactappnetwork:
     driver: bridge
-
-
