--- a/docker-compose-imagepull.yaml
+++ b/docker-compose-imagepull.yaml
@@ -13,6 +13,8 @@ services:
     container_name: backend
     ports:
       - 3500:3500
+    secrets:
+      - db_credentials
     environment:
       - MYSQL_HOST=$MYSQL_HOST
       - MYSQL_USER=$MYSQL_USER
@@ -25,6 +27,8 @@ services:
   db:
     image: saagarsh/react-3-tier-application-db:$VERSION
     container_name: mysqldb
+    secrets:
+      - db_credentials
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQL_DATABASE
@@ -37,5 +41,3 @@ volumes:
 networks:
   reactappnetwork:
     driver: bridge
-
-
