--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,13 @@
-FROM node:14
+FROM node:current-alpine3.22 AS build
 
 WORKDIR /app
 
 COPY package*.json ./
 
 RUN npm install
+RUN chown -R node:node /app
+
+USER node
 
 COPY . .
 
