--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,6 +6,6 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'react-3-tier-application'
+  - job_name: 'node_exporter'
     static_configs:
-      - targets: ['localhost:80', 'localhost:3500', 'localhost:3306']
+      - targets: ['node-exporter:9100']
